fix overflow-x problem on the mobile version

--- a/css/style.css
+++ b/css/style.css
@@ -32,11 +32,13 @@
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
+	overflow-x: hidden !important;
 }
 
 html {
 	scroll-behavior: smooth;
 	scroll-padding: 5rem;
+	max-width: 100vw;
 }
 
 body {
@@ -44,10 +46,6 @@ body {
 	font-family: "Quicksand", sans-serif;
 	font-weight: 500;
 	font-size: 16px;
-	overflow-x: hidden !important;
-}
-
-header {
 	overflow-x: hidden !important;
 }
 
@@ -186,7 +184,6 @@ header {
 	display: flex;
 	justify-content: flex-end;
 	width: 100%;
-	max-width: 100%;
 	height: auto;
 }
 
@@ -721,6 +718,10 @@ button {
 	position: relative;
 }
 
+.contact__form {
+	overflow: hidden;
+}
+
 .contact__form-title,
 .contact__form-input,
 .contact__form-btn {
@@ -859,6 +860,7 @@ button {
 @media screen and (max-width: 750px) {
 	header {
 		max-width: 100%;
+		max-width: 100vw;
 	}
 
 	header .container {
@@ -1064,7 +1066,8 @@ button {
 	.printing,
 	.gadgets,
 	.clothing,
-	.contact {
+	.contact,
+	.about-us {
 		display: grid;
 		grid-template-columns: 1fr 1fr 1fr;
 		column-gap: 3em;
@@ -1087,15 +1090,6 @@ button {
 
 	.hero__logo {
 		margin: 0.5em 0;
-	}
-
-	.about-us {
-		display: flex;
-		gap: 3em;
-	}
-
-	.about-us__column {
-		flex: 1;
 	}
 
 	.big-number__text:hover,
